--- a/package.json
+++ b/package.json
@@ -120,7 +120,6 @@
     "react-dom": "^16.12.0 || ^17.0.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.14.6",
-    "react-image": "^4.0.3"
+    "@babel/runtime": "^7.14.6"
   }
 }
