--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "prepare": "npm run build",
     "semantic-release": "npx semantic-release",
     "start": "npm run build -- -w",
-    "storybook": "npx start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006",
     "test": "npx jest --coverage",
     "travis-deploy-once": "npx travis-deploy-once",
-    "is-build-es5": "npx es-check es5 './build/**/*.!(esm).js'"
+    "is-build-es5": "npx es-check es5 './build/**/*.!(esm).js'",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -61,17 +62,18 @@
     "@rollup/plugin-commonjs": "21.0.1",
     "@rollup/plugin-node-resolve": "13.0.6",
     "@storybook/addon-a11y": "6.3.12",
-    "@storybook/addon-actions": "6.3.12",
+    "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-centered": "5.3.21",
     "@storybook/addon-console": "1.2.3",
-    "@storybook/addon-essentials": "6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-info": "5.3.21",
+    "@storybook/addon-links": "^6.3.12",
     "@storybook/addon-notes": "5.3.21",
     "@storybook/addon-options": "5.3.21",
     "@storybook/addons": "6.3.12",
     "@storybook/channels": "6.3.12",
     "@storybook/cli": "6.3.12",
-    "@storybook/react": "6.3.12",
+    "@storybook/react": "^6.3.12",
     "@storybook/storybook-deployer": "2.8.10",
     "acorn": "8.5.0",
     "autoprefixer": "10.4.0",
